# nlp-experiments

nlp_coursera/1_logistic_regression/: logistic.hy  pyproject.toml
nlp_coursera/2_naive_bayes/: bayes.hy  pyproject.toml
nlp_coursera/3_pca/: pca.hy  pyproject.toml
nlp_coursera/4_lsh/: lsh.hy  pyproject.toml
